17-nginx-ingress-whitelist/status-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "100.0.0.0" # Add your IPs or CIDR ranges, here separated by commas
spec:
  ingressClassName: nginx
  rules:
    - host: status.cooervo.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: status-app
                port:
                  number: 80
            path: /
